# quantum-metachain

./: .env.template  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.json.template  docker-compose.yml  pub_key_2  quantumMetachainSpecRaw.json  requirements.txt  startup.py
.github/: pull_request_template.md
.github/workflows/: check.yaml  check.yml  runner_test.yaml  rust.yaml  test.yaml  unit_test.yaml
.run/: Run qmc-node.run.xml
config/p2p/: config.toml.dist
config/rpc/: config.toml  config.toml.dist
crates/communication/p2p/: Cargo.toml
crates/communication/p2p/src/: config.rs  error.rs  errors.rs  lib.rs  rpc_client.rs  rpc_server.rs  service.rs
crates/communication/qkd/: Cargo.toml
crates/communication/quantum-p2p/: Cargo.toml
crates/communication/quantum-qkd/: Cargo.toml
crates/communication/rpc/: Cargo.toml
crates/communication/rpc/src/: config.rs  error.rs  lib.rs  rpc_server.rs  types.rs
crates/quantum-metachain/: Cargo.toml
crates/quantum-metachain/src/: logger.rs  main.rs
docker/local/: genesis_psk
docker/local/alice/: config.json
docker/local/bob/: config.json  node_key
docker/local/charlie/: config.json  node_key
docker/local/dave/: config.json  node_key
pallets/hypercube/: Cargo.toml
pallets/hypercube/src/: lib.rs
pallets/ocw-psk/: Cargo.toml  README.md
pallets/ocw-psk/src/: lib.rs  tests.rs
pallets/ocw-qkd/: Cargo.toml  README.md
pallets/ocw-qkd/src/: lib.rs  tests.rs
pallets/ocw-randao/: Cargo.toml  README.md
pallets/ocw-randao-storage/: Cargo.toml
pallets/ocw-randao-storage/src/: lib.rs
pallets/ocw-randao/src/: lib.rs
pallets/randao/: Cargo.toml
pallets/randao/src/: lib.rs  tests.rs
pallets/randomness_qrng/: Cargo.toml
pallets/randomness_qrng/src/: lib.rs
pallets/support/: Cargo.toml
pallets/support/src/: lib.rs  local_peer_id.rs
primitives/core/: Cargo.toml
primitives/core/src/: crypto.rs  dilithium2.rs  ed25519.rs  hexdisplay.rs  lib.rs
runner/: app.py  auth.py  config.py  crypto.py  external_server.py  local_server.py  node.py  node_simulator.py  params.py  psk.py  psk_file.py  psk_rotation_test.py  qkd.py  qkd_mock_server.py  qrng.py  runner_services_for_tests.py  setup.py  signature_file.py  test_auth.py  test_crypto.py  test_external_server.py  test_local_server.py  test_node.py  test_psk.py  test_psk_file.py  test_qkd.py  test_qrng.py  test_utils.py  utils.py
runner/common/: config.py  crypto.py  exceptions.py  file.py  logger.py
runner/config/: config_alice.json  config_bob.json  config_charlie.json  config_dave.json
runner/core/: onetimepad.py  pre_shared_key.py  qkd.py  qrng.py
runner/core/qkd/: __init__.py  etsi014.py  qnu_labs.py
runner/psk/: __init__.py  psk.py  psk_file.py  qkd.py  qrng.py  signature_file.py
runner/test/: conftest.py  psk_rotation_simulator.py  runner_test.py  test_config.py  test_crypto.py  test_external_server.py  test_file.py  test_local_server.py  test_onetimepad.py  test_psk.py  test_psk_file.py  test_qkd.py  test_qrng.py  test_runner.py  test_utils.py
runner/test/config/: config_alice.json  config_bob.json
runner/test/tmp/: psk_alice  psk_bob
runner/test/tmp/alice/: config_alice.json  node_key
runner/test/tmp/bob/: config_bob.json  node_key
runner/test/tmp/charlie/: config_charlie.json  node_key
runner/test/tmp/dave/: config_dave.json  node_key
runner/utils/: __init__.py  crypto.py  logger.py  utils.py
runner/web/: __init__.py  error_handler.py  external_server.py  local_server.py  proxy_server.py  qkd_mock_server.py
src/: main.rs
test/tmp/alice/: node_key
test/tmp/bob/: node_key
test_files/: private_key  psk_signature
