[package]
name = "quantum-metachain"
version = "0.1.0"
edition = "2021"

[dependencies]
qmc-p2p = { version = "0.1.0", path = "../communication/p2p" }
qmc-rpc = { version = "0.1.0", path = "../communication/rpc" }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4.22"
libp2p = { version = "0.44.0" }
async-trait = "0.1.57"
thiserror = "1.0.32"
jsonrpc-http-server = "18.0.0"
jsonrpc-core-client = "18.0.0"
