[package]
name = "ocw-qkd"
version = "0.0.1"
description = "A pallet that sends single-use tx key with use of QKD network"
authors = ["Quantum Blockchains"]
homepage = "https://quantumblockchains.io/"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Quantum-Blockchains/quantum-metachain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "kostia/JEQB-127/Get_pre-shared_key_before_p2p_starts" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "kostia/JEQB-127/Get_pre-shared_key_before_p2p_starts" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "kostia/JEQB-127/Get_pre-shared_key_before_p2p_starts" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "kostia/JEQB-127/Get_pre-shared_key_before_p2p_starts" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "kostia/JEQB-127/Get_pre-shared_key_before_p2p_starts" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "kostia/JEQB-127/Get_pre-shared_key_before_p2p_starts" }

[dev-dependencies]
frame-support-test = { version = "3.0.0", git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "kostia/JEQB-127/Get_pre-shared_key_before_p2p_starts" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
