[package]
name = "ocw-randao"
version = "0.0.1"
description = "A pallet responsible for interactions with RANDAO"
authors = ["Quantum Blockchains"]
homepage = "https://quantumblockchains.io/"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Quantum-Blockchains/quantum-metachain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qmc-v0.0.1" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qmc-v0.0.1" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qmc-v0.0.1" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qmc-v0.0.1" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qmc-v0.0.1" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qmc-v0.0.1" }
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.87', default-features = false, features = ['alloc'] }

[dev-dependencies]
frame-support-test = { version = "3.0.0", git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qmc-v0.0.1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
