[package]
name = "qmc-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.44.0" }
async-trait = "0.1.57"
log = "0.4.17"
thiserror = "1.0.32"
config-file = { version = "0.2.3" }
serde = { version = "1.0.144" }
jsonrpc-http-server = "18.0.0"
jsonrpc-core-client = "18.0.0"
